mini/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-vinicius
  name: svc-vinicius
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: conteiner-vinicius
